# cello

./: .gitignore  CMakeLists.txt  build.sh  fetch_deps.sh
doc/: reserved-words.md
example-tests/: create-struct.cel  glfw-test.cel  struct-methods.cel  test-00.cel
src/: arg_parse.cpp  arg_parse.hpp  ast_control.cpp  ast_control.hpp  ast_expr.cpp  ast_expr.hpp  ast_function.cpp  ast_function.hpp  ast_struct.hpp  ast_type.cpp  ast_type.hpp  ast_type_ident.cpp  ast_util.hpp  builtin_types.cpp  builtin_types.hpp  code_gen.hpp  comptime_expr.hpp  error.cpp  error.hpp  lexer.cpp  lexer.hpp  main.cpp  obj_file_gen.hpp  scope.cpp  scope.hpp  source_label.hpp  string_lit_parse.hpp  struct_decl.cpp  struct_decl.hpp  struct_type.cpp  struct_type.hpp  type.cpp  type.hpp  type_ident.hpp
